--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
@@ -566,7 +566,7 @@ $(function() {
 
     function calculateCommon() {
         $('.your_auto').addClass('all_verified');
-        $('.options').show(1000);
+        $('.options').fadeIn(1000);
         $('#scrollbar4').tinyscrollbar({ sizethumb: 47 });
         $.ajax('{{ url('get_price') }}', {
             type: 'POST',
@@ -580,7 +580,7 @@ $(function() {
         }
         ).done(function(data) {
             window.commonPrice = data.price;
-            $('.before_calc').removeClass('show');
+            $('.before_calc').fadeOut(500).removeClass('show');
             $('.calc .price.common').text(String(Number(data.price).toFixed(2)).replace('.', ','));
             $.ajax('{{ url('get_discount') }}', {
             type: 'POST',
@@ -594,17 +594,17 @@ $(function() {
                 if (window.priceNs) pN = window.priceNs;
                 if (data.discount > 0 && data.discount < 1) {
                     $('.calc .discount .discount').text('- ' + (String(Number(discountSum).toFixed(2)).replace('.', ',')) + '');
-                    $('.calc .discount').removeClass('hidden');
-                    $('.calc .discount').show();
+                    $('.calc .discount').fadeIn(400).removeClass('hidden');
+                    //$('.calc .discount').show();
                     $('.itog').text(String((commonPrice - discountSum + pD + pN).toFixed(2)).replace('.', ',') + ' грн.');
                     $('.discount span').text('-' + Math.round((1 - data.discount)*100) + '%');
                 } else {
                     $('.itog').text(String((commonPrice - discountSum + pD + pN).toFixed(2)).replace('.', ',') + ' грн.');
-                    $('.calc .discount').addClass('hidden');
-                    $('.calc .discount').hide();
+                    $('.calc .discount').fadeOut(400).addClass('hidden');
+                    //$('.calc .discount').hide();
                     $('.discount span').text(parseInt(window.discountSum) + '%');
                 }
-                $('.calc').addClass('show');
+                $('.calc').fadeIn(500).addClass('show');
             });
         });
     }
@@ -644,7 +644,7 @@ $(function() {
                     if (window.discountSum) dS = window.discountSum;
                     if (window.priceNs) pN = window.priceNs;
                     $('.calc .dgo').text(String((data.priceDgo.toFixed(2))).replace('.', ','));
-                    $('.calc .dgo').parents('.white_box').removeClass('hidden');
+                    $('.calc .dgo').parents('.white_box').fadeIn(400).removeClass('hidden');
                     $('.itog').text(String(((cP - dS) + data.priceDgo + pN).toFixed(2)).replace('.', ',') + ' грн.');
                 }
             });
@@ -654,7 +654,7 @@ $(function() {
         //if ($('#respons').is(':checked')) $('#respons').trigger('click');
         if ($('#respons').is(':checked')) $('#respons').removeAttr('checked');
         $('.price.dgo').text('');
-        $('.price.dgo').parents('.white_box').addClass('hidden');
+        $('.price.dgo').parents('.white_box').fadeOut(400).addClass('hidden');
         $('.box_line.responsibility').removeClass('focus');
         $('.responsibility').find('.disabled_shadow').addClass('show');
         var pN = 0;
@@ -693,7 +693,7 @@ $(function() {
                 if (window.discountSum) dS = window.discountSum;
                 if (window.priceDgo) pD = window.priceDgo;
                 $('.calc .ns').text(String((data.priceNs.toFixed(2))).replace('.', ','));
-                $('.calc .ns').parents('.white_box').removeClass('hidden');
+                $('.calc .ns').parents('.white_box').fadeIn(400).removeClass('hidden');
                 $('.itog').text(String(((cP - dS + pD) + data.priceNs).toFixed(2)).replace('.', ',') + ' грн.');
             };
         });
@@ -704,7 +704,7 @@ $(function() {
         if ($('#passenger').is(':checked')) $('#passenger').removeAttr('checked');
         $('.price.ns').text('');
         $('.box_line.passengers').removeClass('focus');
-        $('.price.ns').parents('.white_box').addClass('hidden');
+        $('.price.ns').parents('.white_box').fadeOut(400).addClass('hidden');
         $('.passengers').find('.disabled_shadow').addClass('show');
         var pD = 0;
         if (window.priceDgo) pD = window.priceDgo;
