--- a/path/src/Insurance/ContentBundle/Resources/public/css/modals.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/modals.css
@@ -8,6 +8,9 @@
     margin: 200px auto 0;
     padding:20px 0;
     position: relative;
+	-moz-box-shadow:0 0 64px #000;
+	-webkit-box-shadow:0 0 64px #000;
+	box-shadow:0 0 64px #000;
 }
 
 .modal .title{
@@ -70,7 +73,7 @@
 }
 
 .themodal-overlay {
-	background: rgba(0, 0, 0, 0.6);
+	background: rgba(0, 0, 0, 0.65);
 
 	/* IE6–IE8 */
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr = #7F000000, endColorstr = #7F000000);
