--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_one.html.twig
@@ -80,7 +80,7 @@ $(function() {
                     <h1>Расчет стоимости полиса ОСАГО онлайн</h1>
                     <div class="orange_button clear_all">Очистить все</div>
                     <div class="calculator_content">
-					
+
                         <aside class="">
                             <div class="sidebar_title">Стоимость полиса:</div>
                             <div class="before_calc show">
@@ -163,7 +163,7 @@ $(function() {
                             <div class="box_line model"{%if (carModel) is null %} style="display:none;"{% endif %}>
 
                                 <div class="param_name">Модель:</div>
-								
+
 
                                 <ul form-input-id="hCarModel" id="modelList" class="list">
                                     {% if models %}
@@ -355,7 +355,7 @@ $(function() {
                             </div>
                             <!-- -->
                             <div class="box_line taxi">
-							
+
                                 <div class="param_name">Сфера использования автомобиля:</div>
                                 <div class="control_point">
                                     <input type="radio" value="1" class="styled" name="taxiUse" id="taxiUse" {% if app.session.get('taxiUse') == 1 %}checked="checked"{% endif %} />
@@ -490,7 +490,7 @@ $(function() {
         $(this).parents('.box_line').next('.box_line').addClass('focus');
     }
 
-    function loadModels() {
+    function loadModels(e) {
         if ($('#carBrand').val()>0) $.get('{{path('get_car_models')}}', {brand_id: $('#carBrand').val()}).done(function (data) {
                 var opts = '';
                 for (k in data) opts += '<li data-value="' + k + '">' + data[k] + '</li>';
@@ -499,6 +499,7 @@ $(function() {
                 //Reinit plugins, events, etc cause of ajax load
                 $('#scrollbar2').tinyscrollbar({ sizethumb: 47 });
                 //$(".combo ul li").on('click', comboClick);
+                $('.change_link').unbind('click');
                 $('.change_link').on('click', loadModels);
                 selectModel();
                 $('.box_line').removeClass('focus');
@@ -571,6 +572,10 @@ $(function() {
         $.ajax('{{ url('get_price') }}', {
             type: 'POST',
             dataType: 'JSON',
+            beforeSend: function () {
+                if (window.commonInProgress) return false;
+                window.commonInProgress = true;
+            },
             data: {
                 registerCity: $('#registerCity').val(),
                 hDisplacement: $('#hDisplacement').val(),
@@ -579,14 +584,20 @@ $(function() {
             }
         }
         ).done(function(data) {
+            window.commonInProgress = false;
             window.commonPrice = data.price;
             $('.before_calc').removeClass('show');
             $('.calc .price.common').text(String(Number(data.price).toFixed(2)).replace('.', ','));
             $.ajax('{{ url('get_discount') }}', {
             type: 'POST',
             dataType: 'JSON',
+            beforeSend: function () {
+                if (window.discountInProgress) return false;
+                window.discountInProgress = true;
+            },
             data: { carAge: $('#carAge').val(), insuranceTerm: $('#insuranceTerm').val() }
             }).done(function (data) {
+                window.discountInProgress = false;
                 window.discountSum = ((1 - data.discount)*commonPrice);
                 var pD = 0;
                 var pN = 0;
