--- a/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/base.html.twig
@@ -297,8 +297,16 @@
                             $.modal().close();
                             if (typeof callbackF === 'function') callbackF();
                             //If we on calculator page than change order button behaviour
-                            $('.form_now').unbind('click');
-                            $('.form_now').on('click', function(){
+                            if ($('.form_now').length > 0 && $('.form_now').is(':visible')) {
+                                $.ajax('{{path('step1')}}', {
+                                type: 'POST',
+                                data: $('#calculator-form').serialize()
+                                }).done(function(data){
+                                if (data.message == 'success') window.location = '{{path('step2')}}';
+                                });
+                            } else if ($('.form_now').length > 0 && !$('.form_now').is(':visible')) {
+                                $('.form_now').unbind('click');
+                                $('.form_now').on('click', function(){
                                 $.ajax('{{path('step1')}}', {
                                 type: 'POST',
                                 data: $('#calculator-form').serialize()
@@ -306,6 +314,7 @@
                                 if (data.message == 'success') window.location = '{{path('step2')}}';
                                 });
                             });
+                            }
                         } else {
                             if (typeof data.message !== undefined)
                                 alert(data.message)
