--- a/path/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/path/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -1,43 +1,110 @@
 {% form_theme form 'InsuranceContentBundle::form_errors.html.twig' %}
-<form class="fos_user_registration_register modal_form" action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" >
-    <div class="control_point{% if form.firstname.vars.errors|length > 0%} error{% endif %}">
-        {{ form_label(form.firstname) }}
-        {{ form_widget(form.firstname, { 'attr': { 'placeholder': "Введите Ваше имя"} }) }}
-        <div class="success ico"></div>
-        <div class="error ico"></div>
-        <div class="error_text">{{form_errors(form.firstname)}}</div>
-    </div>
-    <div class="control_point{% if form.email.vars.errors|length > 0%} error{% endif %}">
-        {{ form_label(form.email) }}
-        {{ form_widget(form.email, { 'attr': { 'placeholder': "Введите Ваш e-mail"} }) }}
-        <div class="success ico"></div>
-        <div class="error ico"></div>
-        <div class="error_text">{{form_errors(form.email)}}</div>
-    </div>
-    <div class="control_point{% if form.plainPassword.first.vars.errors|length > 0%} error{% endif %}">
-        {{ form_label(form.plainPassword.first) }}
-        {{ form_widget(form.plainPassword.first) }}
-        <div class="success ico"></div>
-        <div class="error ico"></div>
-        <div class="error_text">{{ form_errors(form.plainPassword.first) }}</div>
-    </div>
-    <div class="control_point{% if form.plainPassword.second.vars.errors|length > 0%} error{% endif %}">
-        {{ form_label(form.plainPassword.second) }}
-        {{ form_widget(form.plainPassword.second) }}
-        <div class="success ico"></div>
-        <div class="error ico"></div>
-        <div class="error_text">{{ form_errors(form.plainPassword.second) }}</div>
-    </div>
-    <div class="control_point">
-        <input type="checkbox" class="styled" id="subscribe" checked="checked"/>
-        <label for="subscribe" class="check_label">Согласен получать рассылку о новостях и акциях сервиса</label>
-    </div>
-    <div class="control_point">
-        <input type="checkbox" class="styled" id="accept" />
-        <label for="accept" class="check_label">Согласен с <a href="">пользовательским соглашением</a></label>
-        <div class="error_text">Текст ошибки</div>
-    </div>
-    {{ form_widget(form._token) }}
-    <div class="green_button register">Продолжить</div>
-    <div style="clear: both;"></div>
-</form>
+<!-- REGISTRATION MODAL -->
+<div class="modal" id="registration_modal" style="display: none;">
+    <div class="close"></div>
+    <div class="sub_text">Для оформления полиса Вы будете вводить персональные данные. Для защищенного хранения этих данных, а также безопасного доступа к ним, пройдите пожалуйста простейшую регистрацию.</div>
+    <div class="login_link_box">Если вы уже регистрировались, <span class="login_link">войдите под своим именем</span></div>
+    <!--<div class="social">
+        <a href="" class="vk">Регистрация через VK</a>
+        <a href="" class="fb">Регистрация через FB</a>
+    </div>-->
+    <form class="fos_user_registration_register modal_form" action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" >
+        <div class="control_point{% if form.firstname.vars.errors|length > 0%} error{% endif %}">
+            {{ form_label(form.firstname) }}
+            {{ form_widget(form.firstname, { 'attr': { 'placeholder': "Введите Ваше имя"} }) }}
+            <div class="success ico"></div>
+            <div class="error ico"></div>
+            <div class="error_text">{{- form_errors(form.firstname) -}}</div>
+        </div>
+        <div class="control_point{% if form.email.vars.errors|length > 0%} error{% endif %}">
+            {{ form_label(form.email) }}
+            {{ form_widget(form.email, { 'attr': { 'placeholder': "Введите Ваш e-mail"} }) }}
+            <div class="success ico"></div>
+            <div class="error ico"></div>
+            <div class="error_text">{{- form_errors(form.email) -}}</div>
+        </div>
+        <div class="control_point{% if form.plainPassword.first.vars.errors|length > 0%} error{% endif %}">
+            {{ form_label(form.plainPassword.first) }}
+            {{ form_widget(form.plainPassword.first) }}
+            <div class="success ico"></div>
+            <div class="error ico"></div>
+            <div class="error_text">{{- form_errors(form.plainPassword.first) -}}</div>
+        </div>
+        <div class="control_point{% if form.plainPassword.second.vars.errors|length > 0%} error{% endif %}">
+            {{ form_label(form.plainPassword.second) }}
+            {{ form_widget(form.plainPassword.second) }}
+            <div class="success ico"></div>
+            <div class="error ico"></div>
+            <div class="error_text">{{- form_errors(form.plainPassword.second) -}}</div>
+        </div>
+        <div class="control_point">
+            <input type="checkbox" class="styled" id="subscribe" checked="checked"/>
+            <label for="subscribe" class="check_label">Согласен получать рассылку о новостях и акциях сервиса</label>
+        </div>
+        <div class="control_point">
+            <input type="checkbox" class="styled" id="accept" />
+            <label for="accept" class="check_label">Согласен с <a href="">пользовательским соглашением</a></label>
+            <div class="error_text_box_quest">Подтвердите Ваше согласие с пользовательским соглашением</div>
+        </div>
+        {{ form_widget(form._token) }}
+        <div class="green_button register">Продолжить</div>
+        <div style="clear: both;"></div>
+    </form>
+</div>
+<script>
+$('.green_button.register').on('click', function(){
+    var form = $('.fos_user_registration_register').first();
+    var errors = {};
+    if (!$(form).find('#fos_user_registration_form_email').val().match(/[a-zA-Z]+[a-zA-Z0-9.]*@[a-zA-Z]+\..*[a-zA-Z]{2,4}/)) {
+        $(form).find('#fos_user_registration_form_email').parents('.control_point').addClass('error');
+        $(form).find('#fos_user_registration_form_email').nextAll('.error_text').text('Неправильный формат e-mail,');
+        errors.fos_user_registration_form_email = true;
+    } else
+        $(form).find('#fos_user_registration_form_email').parents('.control_point').addClass('success');
+
+    if ($(form).find('#fos_user_registration_form_firstname').val().length == 0) {
+        $(form).find('#fos_user_registration_form_firstname').parents('.control_point').addClass('error');
+        $(form).find('#fos_user_registration_form_firstname').nextAll('.error_text').text('Имя не должно быть пустым,');
+        errors.fos_user_registration_form_firstname = true;
+    } else
+        $(form).find('#fos_user_registration_form_firstname').parents('.control_point').addClass('success');
+
+    if ($(form).find('#fos_user_registration_form_plainPassword_first').val().length == 0) {
+        $(form).find('#fos_user_registration_form_plainPassword_first').parents('.control_point').addClass('error');
+        $(form).find('#fos_user_registration_form_plainPassword_first').nextAll('.error_text').text('Пароль не должен быть пустым,');
+        errors.fos_user_registration_form_plainPassword_first = true;
+    } else
+        $(form).find('#fos_user_registration_form_plainPassword_first').parents('.control_point').addClass('success');
+
+    if (!$(form).find('#accept').is(':checked')) {
+        $(form).find('#accept').parents('.control_point').addClass('error');
+        errors.accept = true;
+    }
+
+    if (errors.length == 0) {
+        $.ajax($(form).attr('action'), {
+            data: form.serialize(),
+            type: 'POST'
+        }).done(function(data){
+            //On success we will get JSON object with message, on failure we must pull html to form container again and reinit Custom
+            if (typeof data === 'object' && data.message == 'success') {
+                //Process form data
+                $.ajax('{{path('step1')}}', {
+                type: 'POST',
+                data: $('#calculator-form').serialize()
+                }).done(function(data){
+                if (data.message === 'success') window.location = '{{path('step2')}}';
+                });
+            } else {
+                $('#registration_modal').replaceWith(data);
+                $('#registration_modal').modal().open();
+                Custom.init();
+            }
+        });
+    }
+});
+$('.modal .close').on('click', function(e){
+    e.preventDefault();
+    $.modal().close();
+});
+</script>
