--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
@@ -228,7 +228,7 @@
                             <!-- -->
                             <div class="line">
                                 <div class="control_point accept_control">
-                                    <input type="checkbox" class="styled" id="processPersonalData" value="Y" name="processPersonalData" />
+                                    <input type="checkbox" class="styled" id="processPersonalData" checked="checked" value="Y" name="processPersonalData" />
                                     <label for="processPersonalData">
                                         Согласие на обработку персональных данных
                                         <div class="question_ico">
