--- a/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
@@ -203,7 +203,22 @@ form.personal_data .control_point .error_text_box_quest {
 /*------------------------------------------------------------------------------------------- */
 /*---------------------------------------- TOTAL -------------------------------------------- */
 /*------------------------------------------------------------------------------------------- */
-
+.total .green_label {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 23px;
+    color: white;
+    line-height: 58px;
+    padding: 0 20px;
+    background-color: #449C19;
+    border-radius: 4px 0 0 4px;
+    -webkit-border-radius: 4px 0 0 4px;
+    -moz-border-radius: 4px 0 0 4px;
+    -khtml-border-radius: 4px 0 0 4px;
+    display: inline-block;
+    float: left;
+	margin: -1px 15px 0px 0px;
+    /*margin-right: 15px;*/
+     }
 
 .orange_button {
   line-height: 29px;
@@ -222,9 +237,49 @@ form.personal_data .control_point .error_text_box_quest {
   box-shadow: 0 1px 0 white, 0 1px 2px rgba(0, 0, 0, 0.4) inset;
 }
 
-.pop_up {
+.question_ico:hover .pop_up_calendar {
+    display: block; }
+
+.pop_up_total {
+  position: absolute;
+  z-index: 3;
+  left: 26px;
+  top: -9px;
+  width: 240px;
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -khtml-border-radius: 6px;
+  padding: 10px;
   background-color: #f4fae6;
-}
+  -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+  -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  color: black;
+  line-height: 15px;
+  font-weight: 500;
+  display: none; }
+	
+  .pop_up_total:before {
+    content: "";
+    position: absolute;
+    top: 8px;
+    left: -10px;
+    border-top: 10px solid rgba(0, 0, 0, 0);
+    border-right: 10px solid #cccccc;
+    border-bottom: 10px solid rgba(0, 0, 0, 0); }
+	
+  .pop_up_total:after {
+    content: "";
+    position: absolute;
+    top: 8px;
+    left: -9px;
+    border-top: 10px solid rgba(0, 0, 0, 0);
+    border-right: 10px solid #f4fae6;
+    border-bottom: 10px solid rgba(0, 0, 0, 0); }
+
 
 .fixed_pop_up {
   font-size: 13px;
@@ -249,6 +304,75 @@ margin-top: -10px;
 top:50%;
 margin-top: -10px;
  }
+ 
+/*------------------------------------------------------------------------------------------- */
+/*---------------------------------------- POLIS DATE --------------------------------------- */
+/*------------------------------------------------------------------------------------------- */
+.polis_date .label {
+  height: 40px;
+  line-height: 40px; }
+.polis_date .date {
+  height: 40px;
+  line-height: 40px;
+  position: relative;
+  width: 245px;
+  display: inline-block;
+  cursor: pointer;
+  background-color: #fff;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -khtml-border-radius: 5px;
+  border: 1px solid #cfcfcf;
+  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.13) inset;
+  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.13) inset;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.13) inset; } 
+ 
+ .polis_date:hover .pop_up_date {
+    display: block; }
+	
+.pop_up_date {
+  position: absolute;
+  z-index: 3;
+  left: 550px;
+  top: 180px;
+  width: 405px;
+  height: 68px;
+  border-radius: 6px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -khtml-border-radius: 6px;
+  padding: 10px;
+  background-color: #f4fae6;
+  -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+  -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 13px;
+  color: black;
+  line-height: 15px;
+  font-weight: 500;
+  display: none; }
+	
+  .pop_up_date:before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: -10px;
+	margin-top: -10px;
+    border-top: 10px solid rgba(0, 0, 0, 0);
+    border-right: 10px solid #cccccc;
+    border-bottom: 10px solid rgba(0, 0, 0, 0); }
+	
+  .pop_up_date:after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: -9px;
+	margin-top: -10px;
+    border-top: 10px solid rgba(0, 0, 0, 0);
+    border-right: 10px solid #f4fae6;
+    border-bottom: 10px solid rgba(0, 0, 0, 0); }	
 /*------------------------------------------------------------------------------------------- */
 /*-------------------------------------- PERSONAL_INFO FORM --------------------------------- */
 /*------------------------------------------------------------------------------------------- */
