--- a/path/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/path/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -55,37 +55,63 @@
 $('.green_button.register').on('click', function(){
     var form = $('.fos_user_registration_register').first();
     var errors = {};
+    var errorsPresent = false;
     if (!$(form).find('#fos_user_registration_form_email').val().match(/[a-zA-Z]+[a-zA-Z0-9.]*@[a-zA-Z]+\..*[a-zA-Z]{2,4}/)) {
         $(form).find('#fos_user_registration_form_email').parents('.control_point').addClass('error');
         $(form).find('#fos_user_registration_form_email').nextAll('.error_text').text('Неправильный формат e-mail,');
         errors.fos_user_registration_form_email = true;
-    } else
+    } else {
         $(form).find('#fos_user_registration_form_email').parents('.control_point').addClass('success');
+        $(form).find('#fos_user_registration_form_email').parents('.control_point').removeClass('success');
+    }
 
     if ($(form).find('#fos_user_registration_form_firstname').val().length == 0) {
         $(form).find('#fos_user_registration_form_firstname').parents('.control_point').addClass('error');
         $(form).find('#fos_user_registration_form_firstname').nextAll('.error_text').text('Имя не должно быть пустым,');
         errors.fos_user_registration_form_firstname = true;
-    } else
+    } else {
         $(form).find('#fos_user_registration_form_firstname').parents('.control_point').addClass('success');
+        $(form).find('#fos_user_registration_form_firstname').parents('.control_point').removeClass('error');
+    }
 
     if ($(form).find('#fos_user_registration_form_plainPassword_first').val().length == 0) {
         $(form).find('#fos_user_registration_form_plainPassword_first').parents('.control_point').addClass('error');
         $(form).find('#fos_user_registration_form_plainPassword_first').nextAll('.error_text').text('Пароль не должен быть пустым,');
         errors.fos_user_registration_form_plainPassword_first = true;
-    } else
+    } else {
         $(form).find('#fos_user_registration_form_plainPassword_first').parents('.control_point').addClass('success');
+        $(form).find('#fos_user_registration_form_plainPassword_first').parents('.control_point').removeClass('error');
+    }
+
+    if ($(form).find('#fos_user_registration_form_plainPassword_first').val() != $(form).find('#fos_user_registration_form_plainPassword_second').val()) {
+        $(form).find('#fos_user_registration_form_plainPassword_first').parents('.control_point').addClass('error');
+        $(form).find('#fos_user_registration_form_plainPassword_second').parents('.control_point').addClass('error');
+        $(form).find('#fos_user_registration_form_plainPassword_first').parents('.control_point').removeClass('success');
+        $(form).find('#fos_user_registration_form_plainPassword_second').parents('.control_point').removeClass('success');
+        $(form).find('#fos_user_registration_form_plainPassword_first').nextAll('.error_text').text('Пароли не совпадают,');
+        $(form).find('#fos_user_registration_form_plainPassword_second').nextAll('.error_text').text('Пароли не совпадают,');
+        errors.fos_user_registration_form_plainPassword_second = true;
+    } else {
+        $(form).find('#fos_user_registration_form_plainPassword_first').parents('.control_point').addClass('success');
+        $(form).find('#fos_user_registration_form_plainPassword_second').parents('.control_point').addClass('success');
+        $(form).find('#fos_user_registration_form_plainPassword_first').parents('.control_point').removeClass('error');
+        $(form).find('#fos_user_registration_form_plainPassword_second').parents('.control_point').removeClass('error');
+    }
 
     if (!$(form).find('#accept').is(':checked')) {
         $(form).find('#accept').parents('.control_point').addClass('error');
         errors.accept = true;
+    } else {
+        $(form).find('#accept').parents('.control_point').removeClass('error');
     }
-
-    if (errors.length == 0) {
+    for (v in errors) {
+        errorsPresent = true;
+    }
+    if (!errorsPresent) {
         $.ajax($(form).attr('action'), {
             data: form.serialize(),
             type: 'POST'
-        }).done(function(data){
+        }).done(function(data){ console.log('ajaxdone');
             //On success we will get JSON object with message, on failure we must pull html to form container again and reinit Custom
             if (typeof data === 'object' && data.message == 'success') {
                 //Process form data
