--- a/path/app/Resources/FOSUserBundle/views/Registration/register.html.twig
+++ b/path/app/Resources/FOSUserBundle/views/Registration/register.html.twig
@@ -78,12 +78,11 @@ $('.green_button.register').on('click', function(){
         $(form).find('#fos_user_registration_form_plainPassword_first').parents('.control_point').addClass('error');
         $(form).find('#fos_user_registration_form_plainPassword_first').nextAll('.error_text').text('Пароль не должен быть пустым,');
         errors.fos_user_registration_form_plainPassword_first = true;
-    } else {
-        $(form).find('#fos_user_registration_form_plainPassword_first').parents('.control_point').addClass('success');
-        $(form).find('#fos_user_registration_form_plainPassword_first').parents('.control_point').removeClass('error');
-    }
-
-    if ($(form).find('#fos_user_registration_form_plainPassword_first').val() != $(form).find('#fos_user_registration_form_plainPassword_second').val()) {
+    } else if (
+    $(form).find('#fos_user_registration_form_plainPassword_first').val() != $(form).find('#fos_user_registration_form_plainPassword_second').val()
+    ||
+    $(form).find('#fos_user_registration_form_plainPassword_first').val().length == 0
+    ) {
         $(form).find('#fos_user_registration_form_plainPassword_first').parents('.control_point').addClass('error');
         $(form).find('#fos_user_registration_form_plainPassword_second').parents('.control_point').addClass('error');
         $(form).find('#fos_user_registration_form_plainPassword_first').parents('.control_point').removeClass('success');
