чета там в личных данных, ругнулось

--- a/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
+++ b/path/src/Insurance/ContentBundle/Resources/views/Default/step_two.html.twig
@@ -29,7 +29,7 @@
                             {{(app.session.get('price') + app.session.get('priceDGO') + app.session.get('priceNs'))|number_format(2, ',', ' ')}} грн.
                             <div class="question_ico">
                                 <div class="pop_up_total">
-                                    Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                                    Это общая сумма Вашего заказа, в том числе скидка если возраст Вашего автомобиля больше 1 года.
                                 </div>
                             </div>
                         </div>
