--- a/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
@@ -237,7 +237,7 @@ form.personal_data .control_point .error_text_box_quest, .fos_user_registration_
   box-shadow: 0 1px 0 white, 0 1px 2px rgba(0, 0, 0, 0.4) inset;
 }
 
-.question_ico:hover .pop_up_calendar {
+.question_ico:hover .pop_up_total {
     display: block; }
 
 .pop_up_total {
