--- a/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
+++ b/path/src/Insurance/ContentBundle/Resources/public/css/fixes.css
@@ -69,7 +69,7 @@ footer .column.second {
 footer .column.third {
       width: 370px;
 	  text-align: right;
-	  margin-right: 40px;
+	  margin-right: 50px;
 	  font-size: 14px;
 
 	  }
@@ -187,8 +187,8 @@ form.personal_data .control_point .error_text_box_quest, .fos_user_registration_
       font-size: 11px;
       color: white;
       position: absolute;
-      top: 33px;
-      right: 0;
+      top: 30px;
+      left: -9px;
       background-color: #e73636;
       z-index: 3;
       display: none; }
@@ -199,7 +199,7 @@ form.personal_data .control_point .error_text_box_quest, .fos_user_registration_
         border-right: 8px solid rgba(0, 0, 0, 0);
         position: absolute;
         top: -8px;
-        right: 10px; }
+        left: 5px; }
 /*------------------------------------------------------------------------------------------- */
 /*---------------------------------------- TOTAL -------------------------------------------- */
 /*------------------------------------------------------------------------------------------- */
@@ -393,7 +393,14 @@ form.personal_data .control_point input:focus {
       box-shadow: 0 2px 3px rgba(0, 0, 0, 0.41); }
 
 
-
+form.personal_data .control_point .error_text_box:before {
+        content: "";
+        border-bottom: 8px solid #e73636;
+        border-left: 8px solid rgba(0, 0, 0, 0);
+        border-right: 8px solid rgba(0, 0, 0, 0);
+        position: absolute;
+        top: -8px;
+        right: 9px; }
 
 /*------------------------------------------------------------------------------------------- */
 /*----------------------------------------- AUTO INFO --------------------------------------- */
@@ -634,3 +641,41 @@ line-height: 28px;
   form.modal_form .control_point.error .error_text_box_quest, form.modal_form .control_point.error .error_text_box {
     display: block;
 }
+
+::-webkit-input-placeholder {
+   font-size: 14px;
+   font-style: italic;
+}
+
+:-moz-placeholder { /* Firefox 18- */
+   font-size: 14px;
+   font-style: italic; 
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+   font-size: 14px;
+   font-style: italic;  
+}
+
+:-ms-input-placeholder {  
+   font-size: 14px;
+   font-style: italic;  
+}
+
+#Go_Top {
+   position: fixed; 
+   bottom: 120px; 
+   right: 50px; 
+   cursor:pointer; 
+   display:none;
+   z-index: 1000;
+   padding: 15px;
+   background-color: rgb(113, 184, 56);
+     border-radius: 6px;
+    -webkit-border-radius: 6px;
+    -moz-border-radius: 6px;
+    -khtml-border-radius: 6px;
+	box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.26), 0px 0px 3px rgba(0, 0, 0, 0.47) inset;
+   }
+
+ 
